<resources>
    <string name="app_name">GoodNews</string>

    <!--  TutorialActivity  -->
    <string name="tutorial_skip"><u>건너뛰기</u></string>
    <string name="tutorial_description">튜토리얼이미지</string>

    <!--  tutorial_item  -->
    <string name="start">시작하기</string>

    <!--  enter_item  -->
    <string name="enter_info">추가 정보 입력</string>
    <string name="submit">정보 등록</string>
    <string name="later">다음에 등록하기</string>

    <!--  fragment_family_alarm  -->
    <string name="family_regist">가족 등록하기</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="family_next">다음에 하기</string>
    <string name="hyphen">-</string>
    <string name="update_my_info"><u>정보수정</u></string>
    <string name="seeLocation"><u>위치 보기</u></string>
    <string name="location"><u>위치</u></string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>