<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/tutorial_1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/tutorial_step_circle" />

        <TextView
            android:id="@+id/tutorial_2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/tutorial_step_circle" />

        <TextView
            android:id="@+id/tutorial_3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/tutorial_step_circle" />

        <TextView
            android:id="@+id/tutorial_4"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="7dp"
            android:background="@drawable/tutorial_step_circle" />
    </LinearLayout>

    <TextView
        android:id="@+id/tutorial_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="제목"
        android:textColor="@color/font_color"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tutorial_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="세부내용"
        android:textColor="@color/font_color"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial_title" />

    <ImageView
        android:id="@+id/tutorial_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/tutorial_description"
        android:src="@drawable/tutorial_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tutorial_detail" />

    <TextView
        android:id="@+id/tutorial_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/tutorial_skip"
        android:textColor="@color/gray"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tutorial_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="32dp"
        android:background="@drawable/btn_match_parent"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@color/font_color"
        android:textSize="21sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>